--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@tailwindcss/vite": "^4.1.12",
     "daisyui": "^5.0.54",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-fast-marquee": "^1.6.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
