--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "daisyui": "^5.0.54",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-fast-marquee": "^1.6.5"
+    "react-fast-marquee": "^1.6.5",
+    "react-router-dom": "^7.9.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
