feat: Add new text animations and video context management; enhance header visibility based on video state

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "daisyui": "^5.0.54",
     "gsap": "^3.13.0",
     "motion": "^12.23.22",
+    "ogl": "^1.0.11",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-fast-marquee": "^1.6.5",
