--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-fast-marquee": "^1.6.5",
-    "react-router-dom": "^7.9.3"
+    "react-router-dom": "^7.9.3",
+    "web-vitals": "^5.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
